Fix letter spacing for My Stroy section for small screen sizes. Remove period on Services Sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -480,6 +480,14 @@ padding-bottom: 5px;
     width: 100%;
 }
 
+.storyInfo-contain p {
+    margin-top: 10px;
+    letter-spacing: normal;
+    word-spacing: normal;
+    
+} 
+
+
 /* ----- About Section ----- */
 
 .about-container {
@@ -1435,7 +1443,7 @@ img {
     text-align: center;
     justify-content: center;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     overflow: hidden;
     padding: 50px 5%;
 }
@@ -1492,7 +1500,416 @@ span.lb-caption{
 
 /* ----- Contact Section ----- */
 
+/* ---------------------------------Contact Us Section */
 
+.contact-container {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.contactUs {
+    box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
+}
+
+.contactUs {
+    position: relative;
+    width: 100%;
+    padding: 40px 100px; 
+}
+
+.contactUs .title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contactUs .contitle  h2 {
+    color: #4A3729;
+    /* font-family: Merriweather, sans-serif; */
+    font-family: myFont1;
+    font-size: 40px; 
+    font-weight: 700;
+    font-style: italic;
+    letter-spacing: 2px;
+    margin-bottom: 34px;
+    padding-top: 30px;
+}
+
+.contact {
+    padding: 40px;
+    background: #fefefe;
+    box-shadow: 0 5px 35px rgba(0,0,0,0.15);
+}
+
+.contactBox {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 5fr 4fr; 
+    grid-gap: 20px;
+    margin-top: 20px;
+}
+
+.contact-form h3 {
+    text-align: left;
+    color:#4A3729;
+    color: #f9d71c;
+    font-family: Merriweather, sans-serif;
+    font-size: 28px;
+    font-weight: 500;
+    font-style: italic;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+    margin-left: 30px;
+}
+
+.contact-form p {
+    text-align: left;
+    color:#4A3729;
+    color: #f9d71c;
+    /* font-family: Merriweather, sans-serif; */
+    font-family: myFont3;
+    font-size: 28px;
+    font-weight: 500;
+    font-style: italic;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+    margin-left: 130px;
+}
+
+/* -------------- Form Box ------ */
+
+.contactFormBox {
+    position: relative;
+    width: 100%;
+}
+
+.contactFormBox .row50 {
+    display: flex;
+    gap: 20px;
+}
+
+.contact-inputBox {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    width: 80%;
+}
+
+.contactFormBox .row100 .contact-inputBox {
+    width: 100%;
+}
+
+.contact-inputBox span {
+    color: #4A3729;
+    font-weight: 500;
+    margin-top: 10px;
+    margin-bottom: 5px; 
+}
+
+.contact-inputBox input {
+    padding: 10px;
+    font-size: 1.1em; 
+    font-weight: 500;
+    outline: none;
+    border: 1px solid #333;
+}
+
+.contact-inputBox textarea {
+    font-size: 1.1em;
+    outline: none;
+    border: 1px solid #333;
+    resize: none;
+    min-height: 220px;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+.contact-inputBox input[type="submit"] {
+    background: #5c5b5b;
+    color: #FEFEFE;
+    border: none;
+    font-size: 1.1em;
+    font-weight: 500;
+    letter-spacing: 1px;
+    max-width: 120px;
+    cursor: pointer;
+    padding: 14px 15px;
+}
+
+.contact-inputBox ::placeholder {
+    color: #999999;
+} 
+
+/* -------------- Media Queries----- */
+
+@media (max-width: 991px)
+{
+    .contact-container
+    {
+        background: #EDE6DE;
+    }
+    .contactUs
+    {
+        padding: 20px;
+    }
+    .contactBox {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto; 
+    }
+    .contactformBox .row50
+    {
+        display: flex;
+        gap: 0;
+        flex-direction: column;
+    }
+    .contact-inputBox {
+        width: 100%;
+    }
+    .contact
+    {
+        padding: 30px;
+    } 
+
+    
+}  
+
+
+
+
+
+
+
+
+
+/* -------------- Contact Info Box ------ */
+
+.info {
+    background: #000;
+    background: #AA0A90;
+}
+
+.info h3 {
+    color: #fefefe;
+}
+
+.info .infoBoxContact div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.info .infoBoxContact div span{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    min-width: 40px;
+    height: 40px;
+    color: #fefefe;
+    font-size: 1.5em;
+    margin-right: 15px;
+    border-radius: 50%;
+}
+
+.info .infoBoxContact div p {
+    color: #fefefe;
+    font-size: 1.1em;
+}
+
+.info .infoBoxContact div a {
+    color: #fefefe;
+    text-decoration: none;
+    font-size: 1.1em; 
+}
+
+.mediaIcons {
+    margin-top: 40px;
+    display: flex;
+}
+
+.mediaIcons li {
+    list-style: none;
+    margin-right: 15px;
+}
+
+.mediaIcons li a {
+    color: #fefefe;
+    font-size: 2em;
+    color: #ccc;   
+}
+
+.mediaIcons a:hover {
+    color: #EDE6DE;   
+}
+
+.imageBox div {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.appointment {
+    box-sizing: border-box; 
+    font-family: 'Lato', sans-serif;
+}
+
+.appointment .title2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.title2 h2 {
+    color:#fefefe;
+    font-family: Merriweather, sans-serif;
+    font-size: 40px; 
+    font-weight: 700;
+    font-style: italic;
+    letter-spacing: 1px;
+    word-spacing: .4em;
+    margin-bottom: 5px;
+    padding-top: 35px;
+}
+
+.greet-image {
+    grid-area: greet;
+} 
+
+.fun-image {
+    grid-area: fun;
+} 
+
+.bookings {   
+    padding: 40px;
+    background: #fefefe;
+    box-shadow: 0 5px 35px rgba(0,0,0,0.15);  
+}
+
+.bookings h3 {
+    text-align: center;
+    color:#4A3729;
+    font-family: Merriweather, sans-serif;
+    font-size: 28px;
+    font-weight: 500;
+    font-style: italic;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+    margin-top: 35px;
+}
+
+clinicoBox {
+    position: relative;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 5fr; 
+    grid-template-areas: 
+    "imageBox greet " 
+    "fun-image fun";
+    grid-gap: 20px;
+    margin-top: 20px;
+}
+
+
+
+/* -------------- Clinico Image Box Section ------ */
+
+.imageBox {
+    background: #000;
+    width: 100%;
+}
+
+.greet-image h3 {
+    text-align: center;
+    color:#fefefe;
+    font-family: Merriweather, sans-serif;
+    font-size: 22px;
+    font-weight: 500;
+    font-style: italic;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+    margin-top: 35px;
+}
+
+.imageGreet {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    flex-direction: column;
+}
+
+.greet {
+    background: url("assets/images/nur.jpg") no-repeat center center;
+    background-size: cover;
+    padding: 10px;
+    margin: 10px;
+} 
+
+.greet img {
+    border-style: solid;
+    border-width: 4px;
+    border-color: #fefefe;
+    height: 350px;
+    width: 300px; 
+    border-top-left-radius: 25%;
+    border-top-right-radius: 25%;
+}
+
+/* -------------- Image Box 2 Section ------ */
+
+.imageBox2 {
+    background: #fefefe;
+    width: 100%;
+    padding-bottom: 10px;
+}
+
+.fun-image h3 {
+    text-align: center;
+    color: #4A3729;
+    font-family: Merriweather, sans-serif;
+    font-size: 22px;
+    font-weight: 500;
+    font-style: italic;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+    margin-top: 35px;
+    padding-top: 10px;
+}
+
+.imageFun {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    flex-direction: column;
+}
+
+.fun {
+    background: url("assets/images/nur.jpg") no-repeat center center;
+    background-size: cover;
+    padding: 10px;
+    margin: 10px;
+} 
+
+.fun img {
+    border-style: solid;
+    border-width: 4px;
+    border-color: #000;
+    height: 350px;
+    width: 300px; 
+    border-top-left-radius: 25%;
+    border-top-right-radius: 25%;
+}
+
+
+
+
+
+
+
+
+oooooooooooo
 
 .contact
 {
